--- a/gh-commit-audit-docker/Dockerfile
+++ b/gh-commit-audit-docker/Dockerfile
@@ -8,9 +8,9 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the current directory contents into the container at /app
-COPY get-data.py /app/
-COPY monthly-audit.py /app/
-COPY audit-gen.sh /app
+COPY get_data.py /app/
+COPY monthly_audit.py /app/
+COPY audit_gen.sh /app
 COPY requirements.txt /app/
 COPY .env /app/
 
@@ -18,10 +18,10 @@ COPY .env /app/
 RUN pip install --no-cache-dir -r requirements.txt 
 
 # Make the shell script executable
-RUN chmod +x /app/audit-gen.sh
+RUN chmod +x /app/audit_gen.sh
 
 # Create data and output directories
 RUN mkdir -p /audits /logs/error
 
 # Set the entrypoint to the bash script
-ENTRYPOINT ["/app/audit-gen.sh"]
+ENTRYPOINT ["/app/audit_gen.sh"]
