Add TEAM_ID variable to .env.example

--- a/gh-commit-audit-with-send-email-docker/.env.example
+++ b/gh-commit-audit-with-send-email-docker/.env.example
@@ -1,4 +1,5 @@
 ORG_NAME=<your_github_organization>
+TEAM_ID=<your_github_team_id>
 MONTH_START=<your_starting_month_format_yyyy-mm>
 MONTH_END=<your_ending_month_format_yyyy-mm>
 IS_PERIOD=<0_or_1>
